override three_up li width in ie7 to stop end column spilling over to next line

--- a/blogs/themes/mysociety/sass/ie/_ie7.scss
+++ b/blogs/themes/mysociety/sass/ie/_ie7.scss
@@ -481,6 +481,7 @@ header.section_intro{
         }
         &.three_up li{
             @include grid-1-of-3;
+            width: 18em;
             &:nth-child(3n+1){
                 clear: left;
             }
